Linux logs error `kfd kfd: amdgpu: VERDE not supported in kfd`
On a Dell OptiPlex 5055 with
$ lspci -nn -s 5:00
05:00.0 VGA compatible controller [0300]: Advanced Micro Devices, Inc. [AMD/ATI] Cape Verde PRO / Venus LE / Tropo PRO-L [Radeon HD 8830M / R7 250 / R7 M465X] [1002:6... (rev 87)
05:00.1 Audio device [0403]: Advanced Micro Devices, Inc. [AMD/ATI] Oland/Hainan/Cape Verde/Pitcairn HDMI Audio [Radeon HD 7000 Series] [1002:aab0]
Linux 6.9-rc4 logs the error below:
$ dmesg --level alert,crit,err
[ 7.874427] kfd kfd: amdgpu: VERDE not supported in kfd
$ dmesg | grep -e "DMI:" -e "Linux version" -e microcode
[ 0.000000] Linux version 6.9.0-rc4.mx64.461-00045-g6c95a9f46024 (pmenzel@holidayincambodia.molgen.mpg.de) (gcc (GCC) 12.3.0, GNU ld (GNU Binutils) 2.41) #17 SMP PREEMPT_DYNAMIC Thu Apr 18 12:10:17 CEST 2024
[ 0.000000] DMI: Dell Inc. OptiPlex 5055 Ryzen CPU/0P03DX, BIOS 1.1.20 05/31/2019
[ 3.499723] microcode: Current revision: 0x08001137
As this seems to be a hardware limitation, and the error message does not give any hint about what can be changed, I’d say the log level should be demoted to info?
Edited by Paul Menzel